--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,14 @@ target/
 
 # Sometimes, this output is useful.
 a.out
+
+
+
+
+
+#-----------------
+# My Editor stuff
+#-----------------
+
+*~
+*#
